src/core/catchem_api.hpp

int catchem_state_set_physical_validation_policy_checked(void* state_ptr, int policy);
int catchem_state_get_physical_validation_report_checked(void* state_ptr, int* issue_count, char* detail,
                                                         int detail_length);
void catchem_config_get_diag_species_at(void* core_ptr, int index, char* buffer, int max_len);
/// diagnostics.output.attributes (feature 013, FR-011): run-level NetCDF global
/// attributes.  Iteration order is the map's key order, so it is deterministic.
int catchem_config_get_output_attribute_count(void* core_ptr);
void catchem_config_get_output_attribute_key_at(void* core_ptr, int index, char* buffer, int max_len);
void catchem_config_get_output_attribute_value_at(void* core_ptr, int index, char* buffer, int max_len);
/// Path of the YAML the configuration was loaded from ("" before load).
void catchem_config_get_config_file_path(void* core_ptr, char* buffer, int max_len);
/// Build provenance baked in at configure time (feature 013, FR-011).
void catchem_get_build_version(char* buffer, int max_len);
void catchem_get_build_commit(char* buffer, int max_len);
int catchem_config_get_process_active(void* core_ptr, const char* process_name);
int catchem_config_has_emission_mapping(void* core_ptr);
// Diagnostic API
void catchem_diag_register(void* core_ptr, const char* name, const char* desc, const char* units, int rank, int dim1,
                           int dim2, int dim3);
int catchem_diag_register_checked(void* core_ptr, const char* name, const char* desc, const char* units, int rank,
                                  int dim1, int dim2, int dim3);
int catchem_diag_register_contract_checked(void* core_ptr, const char* name, const char* desc, const char* units,
                                           int rank, const int* dims, const int* axes, int policy, double reset_value);
int catchem_diag_get_contract(void* core_ptr, const char* name, int* generation, int* availability, int* latest_writer,
                              int* policy);
void* catchem_diag_get_pointer(void* core_ptr, const char* name);
int catchem_diag_get_rank(void* core_ptr, const char* name);
int catchem_diag_get_rank_checked(void* core_ptr, const char* name, int* rank_out);
void catchem_diag_get_dims(void* core_ptr, const char* name, int* dims_out);
int catchem_diag_get_dims_checked(void* core_ptr, const char* name, int* dims_out, int dims_length);
int catchem_diag_get_pointer_checked(void* core_ptr, const char* name, int rank, const int* dims, void** ptr_out);
void catchem_diag_sync_to_host(void* core_ptr);
int catchem_diag_get_count(void* core_ptr);
int catchem_diag_get_count_checked(void* core_ptr, int* count_out);
void catchem_diag_get_name_at(void* core_ptr, int index, char* name_out);
int catchem_diag_get_name_at_checked(void* core_ptr, int index, char* name_out, int name_length);
int catchem_state_get_species_count(void* state_ptr);
// Individual property getters (by 1-based index)
double catchem_state_get_species_mw(void* state_ptr, int index);