src/api/CATChem_API.F90


      subroutine catchem_config_get_diag_species_at(core_ptr, index, buffer, max_len) &
         bind(C, name="catchem_config_get_diag_species_at")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      integer(c_int) function catchem_config_get_output_attribute_count(core_ptr) &
         bind(C, name="catchem_config_get_output_attribute_count")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      subroutine catchem_config_get_output_attribute_key_at(core_ptr, index, buffer, max_len) &
         bind(C, name="catchem_config_get_output_attribute_key_at")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      subroutine catchem_config_get_output_attribute_value_at(core_ptr, index, buffer, max_len) &
         bind(C, name="catchem_config_get_output_attribute_value_at")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      subroutine catchem_config_get_config_file_path(core_ptr, buffer, max_len) &
         bind(C, name="catchem_config_get_config_file_path")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      subroutine catchem_get_build_version(buffer, max_len) &
         bind(C, name="catchem_get_build_version")
         import :: c_char, c_int
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      subroutine catchem_get_build_commit(buffer, max_len) &
         bind(C, name="catchem_get_build_commit")
         import :: c_char, c_int
         character(kind=c_char), intent(out) :: buffer(*)
         integer(c_int), value :: max_len
      end subroutine

      integer(c_int) function catchem_config_get_process_active(core_ptr, process_name) &
         bind(C, name="catchem_config_get_process_active")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: process_name(*)
      end function

      integer(c_int) function catchem_config_has_emission_mapping(core_ptr) &
         bind(C, name="catchem_config_has_emission_mapping")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      type(c_ptr) function catchem_diag_get_pointer(core_ptr, name) bind(C, name="catchem_diag_get_pointer")
         import :: c_ptr, c_char
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
      end function

      integer(c_int) function catchem_diag_get_pointer_checked(core_ptr, name, rank, dims, ptr_out) &
         bind(C, name="catchem_diag_get_pointer_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), value :: rank
         integer(c_int), intent(in) :: dims(*)
         type(c_ptr), intent(out) :: ptr_out
      end function

      integer(c_int) function catchem_diag_get_rank(core_ptr, name) bind(C, name="catchem_diag_get_rank")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
      end function

      integer(c_int) function catchem_diag_get_rank_checked(core_ptr, name, rank_out) &
         bind(C, name="catchem_diag_get_rank_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), intent(out) :: rank_out
      end function

      subroutine catchem_diag_get_dims(core_ptr, name, dims_out) bind(C, name="catchem_diag_get_dims")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), intent(out) :: dims_out(*)
      end subroutine

      integer(c_int) function catchem_diag_get_dims_checked(core_ptr, name, dims_out, dims_length) &
         bind(C, name="catchem_diag_get_dims_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), intent(out) :: dims_out(*)
         integer(c_int), value :: dims_length
      end function

      subroutine catchem_diag_register(core_ptr, name, desc, units, rank, dim1, dim2, dim3) &
         bind(C, name="catchem_diag_register")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         character(kind=c_char), intent(in) :: desc(*)
         character(kind=c_char), intent(in) :: units(*)
         integer(c_int), value :: rank, dim1, dim2, dim3
      end subroutine

      integer(c_int) function catchem_diag_register_checked(core_ptr, name, desc, units, rank, dim1, dim2, dim3) &
         bind(C, name="catchem_diag_register_checked")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*), desc(*), units(*)
         integer(c_int), value :: rank, dim1, dim2, dim3
      end function

      integer(c_int) function catchem_diag_register_contract_checked(core_ptr, name, desc, units, rank, dims, axes, &
         policy, reset_value) &
         bind(C, name="catchem_diag_register_contract_checked")
         import :: c_ptr, c_char, c_int, c_double
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*), desc(*), units(*)
         integer(c_int), value :: rank, policy
         integer(c_int), intent(in) :: dims(*), axes(*)
         real(c_double), value :: reset_value
      end function

      integer(c_int) function catchem_diag_get_contract(core_ptr, name, generation, availability, latest_writer, &
         policy) bind(C, name="catchem_diag_get_contract")
         import :: c_ptr, c_char, c_int
         type(c_ptr), value :: core_ptr
         character(kind=c_char), intent(in) :: name(*)
         integer(c_int), intent(out) :: generation, availability, latest_writer, policy
      end function

      subroutine catchem_diag_sync_to_host(core_ptr) bind(C, name="catchem_diag_sync_to_host")
         import :: c_ptr
         type(c_ptr), value :: core_ptr
      end subroutine

      integer(c_int) function catchem_diag_get_count(core_ptr) bind(C, name="catchem_diag_get_count")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
      end function

      integer(c_int) function catchem_diag_get_count_checked(core_ptr, count_out) &
         bind(C, name="catchem_diag_get_count_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: core_ptr
         integer(c_int), intent(out) :: count_out
      end function

      subroutine catchem_diag_get_name_at(core_ptr, index, name_out) bind(C, name="catchem_diag_get_name_at")
         import :: c_ptr, c_int, c_char
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index
         character(kind=c_char), intent(out) :: name_out(*)
      end subroutine

      integer(c_int) function catchem_diag_get_name_at_checked(core_ptr, index, name_out, name_length) &
         bind(C, name="catchem_diag_get_name_at_checked")
         import :: c_ptr, c_int, c_char
         type(c_ptr), value :: core_ptr
         integer(c_int), value :: index, name_length
         character(kind=c_char), intent(out) :: name_out(*)
      end function

      integer(c_int) function catchem_state_get_species_count(state_ptr) bind(C, name="catchem_state_get_species_count")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
      end function

      integer(c_int) function catchem_state_set_physical_validation_policy_checked(state_ptr, policy) &
         bind(C, name="catchem_state_set_physical_validation_policy_checked")
         import :: c_ptr, c_int
         type(c_ptr), value :: state_ptr
         integer(c_int), value :: policy
      end function

      integer(c_int) function catchem_state_get_physical_validation_report_checked( &
         state_ptr, issue_count, detail, detail_length) &
         bind(C, name="catchem_state_get_physical_validation_report_checked")
         import :: c_ptr, c_int, c_char
         type(c_ptr), value :: state_ptr
         integer(c_int), intent(out) :: issue_count
         character(kind=c_char), intent(out) :: detail(*)
         integer(c_int), value :: detail_length
      end function

      real(c_double) function catchem_state_get_species_mw(state_ptr, index) bind(C, name="catchem_state_get_species_mw")
         import :: c_ptr, c_int, c_double
         type(c_ptr), value :: state_ptr
         integer(c_int), value :: index
      end function
   end interface
